<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestTwo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="bill">Bill</string>
    <string name="bill_amount">0.0</string>

    <string name="tips">TIP: </string>
    <string name="tip_init">0.15</string>
    <string name="tip_change">Change Tips</string>


    <string name="final_bill">Final Bill</string>
    <string name="final_bill_init">0.0</string>

    <string name="intro_text">Introduction</string>
    <string name="intro_friendly_text">Friendly</string>
    <string name="intro_specials_text">Specials</string>
    <string name="intro_opinion_text">Opinion</string>

    <string name="availability_text">Availability</string>
    <string name="availability_bad_text">Bad</string>
    <string name="availability_ok_text">OK</string>
    <string name="availability_good_text">Good</string>

    <string-array name="problem_solving">
        <item>Problem Solving</item>
        <item>Bad</item>
        <item>OK</item>
        <item>Good</item>
    </string-array>

    <string name="time_waiting_text">Time Waiting for Service</string>
    <string name="start_text">Start</string>
    <string name="pause_text">Pause</string>
    <string name="reset_text">Reset</string>



</resources>
