<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.testtwo.app.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/bill"
        android:id="@+id/textViewBill"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextBill"
        android:layout_alignTop="@+id/textViewBill"
        android:layout_toRightOf="@+id/textViewBill"
        android:ems="5"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tips"
        android:id="@+id/textViewTip"
        android:layout_alignTop="@+id/editTextBill"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextTip"
        android:layout_alignTop="@+id/textViewTip"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="70dp"
        android:layout_toRightOf="@+id/textViewTip"
        android:ems="4"
        android:inputType="numberDecimal"
        android:text="@string/tip_init" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/final_bill"
        android:id="@+id/textViewFinalBill"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/seekBarTip"
        android:layout_alignLeft="@+id/editTextBill"
        android:layout_alignStart="@+id/editTextBill" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextFinalBill"
        android:inputType="numberDecimal"
        android:text="@string/final_bill_init"
        android:ems="6"
        android:layout_alignTop="@+id/textViewFinalBill"
        android:layout_toRightOf="@+id/textViewFinalBill" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarTip"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/editTextTip"
        android:progress="15"
        android:layout_alignLeft="@+id/textViewTip"
        android:layout_alignStart="@+id/textViewTip" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tip_change"
        android:id="@+id/textViewTipChange"
        android:layout_alignTop="@+id/seekBarTip"
        android:layout_toLeftOf="@+id/textViewTip" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/intro_text"
        android:id="@+id/textView_intro"
        android:layout_below="@+id/editTextFinalBill"
        android:layout_toRightOf="@+id/textViewBill"
        android:layout_marginTop="34dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_friendly_text"
        android:id="@+id/checkBoxFriendly"
        android:layout_below="@+id/textView_intro"
        android:layout_alignRight="@+id/textViewFinalBill"
        android:layout_alignEnd="@+id/textViewFinalBill" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_specials_text"
        android:id="@+id/checkBoxSpecial"
        android:layout_below="@+id/textView_intro"
        android:layout_alignLeft="@+id/editTextFinalBill"
        android:layout_alignStart="@+id/editTextFinalBill" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_opinion_text"
        android:id="@+id/checkBoxOpinion"
        android:layout_alignTop="@+id/checkBoxSpecial"
        android:layout_alignRight="@+id/editTextTip"
        android:layout_alignEnd="@+id/editTextTip" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroupAvailable"
        android:layout_below="@+id/textViewAvailable"
        android:layout_alignLeft="@+id/textViewTimeWaiting"
        android:layout_alignStart="@+id/textViewTimeWaiting"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/availability_bad_text"
            android:id="@+id/radioButtonBad" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/availability_ok_text"
            android:id="@+id/radioButtonOK"
            android:layout_alignTop="@+id/radioGroupAvailable"
            android:layout_toRightOf="@+id/radioGroupAvailable" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/availability_good_text"
            android:id="@+id/radioButtonGood"
            android:layout_alignTop="@+id/radioButtonOK"
            android:layout_toRightOf="@+id/radioButtonOK" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/availability_text"
        android:id="@+id/textViewAvailable"
        android:layout_below="@+id/checkBoxFriendly"
        android:layout_toLeftOf="@+id/checkBoxSpecial" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/time_waiting_text"
        android:id="@+id/textViewTimeWaiting"
        android:layout_above="@+id/buttonStart"
        android:layout_alignLeft="@+id/checkBoxFriendly"
        android:layout_alignStart="@+id/checkBoxFriendly"
        android:layout_marginBottom="28dp" />

    <Chronometer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chronometerTimeWaiting"
        android:layout_alignTop="@+id/textViewTimeWaiting"
        android:layout_alignBottom="@+id/textViewTimeWaiting"
        android:layout_alignRight="@+id/checkBoxOpinion"
        android:layout_alignEnd="@+id/checkBoxOpinion" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_text"
        android:id="@+id/buttonStart"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/textViewTimeWaiting"
        android:layout_alignStart="@+id/textViewTimeWaiting" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause_text"
        android:id="@+id/buttonPause"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/checkBoxSpecial"
        android:layout_alignStart="@+id/checkBoxSpecial" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_text"
        android:id="@+id/buttonReset"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/checkBoxOpinion"
        android:layout_alignStart="@+id/checkBoxOpinion" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerProblem"
        android:layout_below="@+id/radioGroupAvailable"
        android:layout_alignLeft="@+id/textView_intro"
        android:layout_alignStart="@+id/textView_intro"
        android:entries="@array/problem_solving"/>


</RelativeLayout>
